<resources>
    <string name="app_name">My Application</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="datum_rodenja">Datum rođenja</string>
    <string name="unesite_datum_rodenja">Unesite datum rođenja</string>
    <string name="dalje">Nastavi</string>
    <string name="upiši_naziv_predmeta">Upiši naziv predmeta</string>
    <string name="upis_profesora">Upiši profesora</string>
    <string name="upis_akademske_godine">Upis akademske godine</string>
    <string name="upis_broja_sati_predavanja">Upis broja sati predavanja</string>
    <string name="upis_broja_sati_laboratorijskih_vježbi">Upis broj sati laboratorijskih vježbi</string>
    <string name="upis_podataka">Upis podataka</string>
    <string name="stvaranje_novog_studenta">Stvaranje novog studenta</string>
    <string name="povratak">Povratak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>