<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentInfoActivity">

    <Spinner
        android:id="@+id/spOdabirPredmeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/upiši_naziv_predmeta"
        />

    <Spinner
        android:id="@+id/spUpisProfesora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/spOdabirPredmeta"
        android:hint="@string/upis_profesora"
        />
    <!--
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUpisPredmeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNazivPredmeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upiši_naziv_predmeta" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUpisProfesora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tilUpisPredmeta">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNazivProfesora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upis_profesora" />
    </com.google.android.material.textfield.TextInputLayout>
-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAkademskaGodina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/spUpisProfesora">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUpisAkademskeGodine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upis_akademske_godine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBrojSatiPredavanja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tilAkademskaGodina">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUpisSatiPredavanja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upis_broja_sati_predavanja" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBrojSatiLabosa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tilBrojSatiPredavanja">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUpisSatiLabosa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upis_broja_sati_laboratorijskih_vježbi" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUpisPredmeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/upis_podataka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>